Fix paragraph spacing

--- a/css/global.css
+++ b/css/global.css
@@ -66,6 +66,7 @@ main {
 p {
   margin: .25rem 0;
 }
+main > p,
 article > p {
   margin-top: 1.85rem;
 }
